# agora_doc_source

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  .vale-md.ini  .vale.ini  Brewfile  Doc.xpr  README.md  RTC_API.ditamap  RTC_API_Android.ditamap  RTC_API_Rust.ditamap  RTC_API_Windows.ditamap  add_params_to_json.py  filters.ditaval  implementation-intro.md  name_groups_overload.json  package-lock.json  package.json  rtc_api.xpr  set-sampling-volume.md  simplified_dita_converter.py  test-vale.md  test.ditamap  testdoc.ditamap  voice-android.ditamap  voice-ios.ditamap  voice.ditamap  volume-overview.md  web.ditamap
.github/: sync.yml
.husky/: pre-commit
API/: API-overview.dita  API-overview.md  LiveTranscoding.dita  RtcEngine.dita  RtcEngine.md  RtcEngineEventHandler.dita  RtcEngineEventHandler.md  TranscodingUser.dita  api-data-type.dita  api-data-type.md  api_createagorartcengine.dita  api_data_type.dita  api_disablevideo.dita  api_enablelocalvideo.dita  api_enablevideo.dita  api_joinchannel.dita  api_leavechannel.dita  api_muteallremotevideostreams.dita  api_mutelocalvideostream.dita  api_muteremotevideostream.dita  api_onclientrolechanged.dita  api_onfirstremotevideodecoded.dita  api_onleavechannel.dita  api_onremotevideostatechanged.dita  api_onuserjoined.dita  api_onuseroffline.dita  api_release.dita  api_setaudioprofile.dita  api_setchannelprofile.dita  api_setclientrole.dita  api_setclientrole1.dita  api_setdefaultmuteallremotevideostreams.dita  api_setlivetranscoding.dita  api_setlocalrendermode.dita  api_setremoterendermode.dita  api_setremoterendermode2.dita  api_setuplocalvideo.dita  api_setupremotevideo.dita  api_setvideoencoderconfiguration.dita  api_startpreview.dita  (+29 more)
Guide/: set-sampling-volume.md
RTC/: RTC_API_Android.ditamap  (+3 more)
scripts/dita-to-json/: README.md  name_groups.json  name_groups_framework.json  pyproject.toml
scripts/dita-to-json/src/dita_extractor/: __init__.py  config.py  dita_parser.py  json_builder.py  keymap_parser.py  logger.py  main.py  markdown_converter.py  models.py  scope_resolver.py  validator.py
update-comment/api_comment_updater/: Makefile  pyproject.toml  test-expected-output.h
update-comment/api_comment_updater/.cursor/rules/: 一条龙修复流程.mdc
update-comment/api_comment_updater/config/: repo_config.yml  test_config.yml
update-comment/api_comment_updater/src/: __init__.py  main.py
update-comment/api_comment_updater/src/injectors/: __init__.py  code_locator.py  comment_injector.py  comment_injector_old.py
update-comment/api_comment_updater/src/parsers/: __init__.py  class_parser.py  enum_parser.py  parser_factory.py  toc_parser.py
update-comment/api_comment_updater/src/processors/: comment_normalizer.py
update-comment/api_comment_updater/src/utils/: file_utils.py  logger.py  text_utils.py
update-comment/api_comment_updater/tests/: test_config_manager.py  test_html_parsers.py
update-comment/api_comment_updater/tests/src/: test.java
xml2json/code_to_check/cpp_ng/rte/: .clang-format  BUILD.gn  merge.py
xml2json/code_to_check/cpp_ng/rte/api/: AgoraRteBase.h  AgoraRteLog.h  AgoraRteSdk.h  CHANGES.md  IAgoraRteDeviceManager.h  IAgoraRteMediaFactory.h  IAgoraRteMediaObserver.h  IAgoraRteMediaPlayer.h  IAgoraRteMediaTrack.h  IAgoraRtePlayList.h  IAgoraRteScene.h  IAgoraRteStreamingSource.h
xml2json/code_to_check/cpp_ng/rte/impl/: AgoraRteAudioDeviceManager.cpp  AgoraRteAudioDeviceManager.h  AgoraRteAudioTrackImpl.cpp  AgoraRteAudioTrackImpl.h  AgoraRteCameraVideoTrack.cpp  AgoraRteCameraVideoTrack.h  AgoraRteCdnStream.cpp  AgoraRteCdnStream.h  AgoraRteCustomAudioTrack.cpp  AgoraRteCustomAudioTrack.h  AgoraRteCustomVideoTrack.cpp  AgoraRteCustomVideoTrack.h  AgoraRteLog.cpp  AgoraRteMediaFactory.cpp  AgoraRteMediaFactory.h  AgoraRteMediaPlayer.cpp  AgoraRteMediaPlayer.h  AgoraRteMicrophoneAudioTrack.cpp  AgoraRteMicrophoneAudioTrack.h  AgoraRteMixedVideoTrack.cpp  AgoraRteMixedVideoTrack.h  AgoraRtePlayList.cpp  AgoraRtePlayList.h  AgoraRteRtcCompatibleStream.cpp  AgoraRteRtcCompatibleStream.h  AgoraRteRtcStream.cpp  AgoraRteRtcStream.h  AgoraRteRtcStreamObserver.cpp  AgoraRteRtcStreamObserver.h  AgoraRteScene.cpp  AgoraRteScene.h  AgoraRteScreenVideoTrack.cpp  AgoraRteScreenVideoTrack.h  AgoraRteSdk.cpp  AgoraRteStream.h  AgoraRteStreamFactory.cpp  AgoraRteStreamFactory.h  AgoraRteStreamingSource.cpp  AgoraRteStreamingSource.h  AgoraRteTrackBase.cpp  (+12 more)
(+24935 files in other folders)
