[project]
name = "dita-extractor"
version = "0.1.0"
description = "Extract DITA documentation to structured JSON"
requires-python = ">=3.10"
dependencies = [
    "lxml>=5.0.0",
    "loguru>=0.7.0",
]

[project.scripts]
dita-extract = "dita_extractor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dita_extractor"]

