import("//!build/agora/package.gni")
import("//!build/agora/raw_link.gni")
import("../../../agora.gni")
package("rte_cpp_impl") {
  agora_library_type = "partial_static_library"
  public_interface = [
    "api",
    "impl",
  ]
  configs = [
    "$media_sdk_path:agora_config",
    "$media_sdk_path:agora_rte_config",
  ]
  sources = [
    "../media_component/internal/media_player_i.h",
    "api/AgoraRteBase.h",
    "api/AgoraRteLog.h",
    "api/IAgoraRteDeviceManager.h",
    "api/IAgoraRteMediaFactory.h",
    "api/IAgoraRteMediaObserver.h",
    "api/IAgoraRteMediaPlayer.h",
    "api/IAgoraRteMediaTrack.h",
    "api/IAgoraRtePlayList.h",
    "api/IAgoraRteScene.h",
    "api/IAgoraRteStreamingSource.h",
    "impl/AgoraRteAudioDeviceManager.cpp",
    "impl/AgoraRteAudioDeviceManager.h",
    "impl/AgoraRteAudioTrackImpl.cpp",
    "impl/AgoraRteAudioTrackImpl.h",
    "impl/AgoraRteCameraVideoTrack.cpp",
    "impl/AgoraRteCameraVideoTrack.h",
    "impl/AgoraRteCdnStream.cpp",
    "impl/AgoraRteCdnStream.h",
    "impl/AgoraRteCustomAudioTrack.cpp",
    "impl/AgoraRteCustomAudioTrack.h",
    "impl/AgoraRteCustomVideoTrack.cpp",
    "impl/AgoraRteCustomVideoTrack.h",
    "impl/AgoraRteLog.cpp",
    "impl/AgoraRteMediaFactory.cpp",
    "impl/AgoraRteMediaFactory.h",
    "impl/AgoraRteMediaPlayer.cpp",
    "impl/AgoraRteMediaPlayer.h",
    "impl/AgoraRteMicrophoneAudioTrack.cpp",
    "impl/AgoraRteMicrophoneAudioTrack.h",
    "impl/AgoraRteMixedVideoTrack.cpp",
    "impl/AgoraRteMixedVideoTrack.h",
    "impl/AgoraRtePlayList.cpp",
    "impl/AgoraRtePlayList.h",
    "impl/AgoraRteRtcCompatibleStream.cpp",
    "impl/AgoraRteRtcCompatibleStream.h",
    "impl/AgoraRteRtcStream.cpp",
    "impl/AgoraRteRtcStream.h",
    "impl/AgoraRteRtcStreamObserver.cpp",
    "impl/AgoraRteRtcStreamObserver.h",
    "impl/AgoraRteScene.cpp",
    "impl/AgoraRteScene.h",
    "impl/AgoraRteScreenVideoTrack.cpp",
    "impl/AgoraRteScreenVideoTrack.h",
    "impl/AgoraRteSdk.cpp",
    "impl/AgoraRteSdk.h",
    "impl/AgoraRteStreamFactory.cpp",
    "impl/AgoraRteStreamFactory.h",
    "impl/AgoraRteStreamingSource.cpp",
    "impl/AgoraRteStreamingSource.h",
    "impl/AgoraRteTrackBase.cpp",
    "impl/AgoraRteTrackBase.h",
    "impl/AgoraRteTrackImplBase.h",
    "impl/AgoraRteUtils.cpp",
    "impl/AgoraRteUtils.h",
    "impl/AgoraRteVideoDeviceManager.cpp",
    "impl/AgoraRteVideoDeviceManager.h",
    "impl/AgoraRteVideoTrackImpl.cpp",
    "impl/AgoraRteVideoTrackImpl.h",
    "impl/AgoraRteWrapperAudioTrack.cpp",
    "impl/AgoraRteWrapperAudioTrack.h",
    "impl/AgoraRteWrapperVideoTrack.cpp",
    "impl/AgoraRteWrapperVideoTrack.h",
  ]
  public_deps = [ "${media_sdk_path}/build/public:agora_rtc_sdk" ]
}